[gd_scene load_steps=33 format=2]

[ext_resource path="res://player/melanie/MelanieModel.glb" type="PackedScene" id=1]
[ext_resource path="res://player/TargetDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/melanie/ShieldAnim_Old.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/melanie/BombSpawner.gd" type="Script" id=4]
[ext_resource path="res://player/melanie/Melanie.gd" type="Script" id=5]
[ext_resource path="res://player/InteractArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/melanie/ShieldMesh.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/ledge_detection/LedgeGrabSystem.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/melanie/base_movement_anim.tres" type="AnimationNodeBlendSpace2D" id=10]

[sub_resource type="AnimationNodeTimeScale" id=17]

[sub_resource type="AnimationNodeBlendTree" id=18]
graph_offset = Vector2( 145, 3.75 )
nodes/BlendSpace2D/node = ExtResource( 10 )
nodes/BlendSpace2D/position = Vector2( 220, 120 )
nodes/TimeScale/node = SubResource( 17 )
nodes/TimeScale/position = Vector2( 440, 120 )
nodes/output/position = Vector2( 640, 120 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Land"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Shield_Bash"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Shield_PutAway"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Shield_TakeOut"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Bash/node = SubResource( 22 )
states/Bash/position = Vector2( 720, 209 )
states/PutAway/node = SubResource( 23 )
states/PutAway/position = Vector2( 720, 116 )
states/TakeOut/node = SubResource( 24 )
states/TakeOut/position = Vector2( 430, 116 )
transitions = [ "TakeOut", "PutAway", SubResource( 25 ), "PutAway", "Bash", SubResource( 26 ), "Bash", "PutAway", SubResource( 27 ) ]
graph_offset = Vector2( -4, 18 )

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
auto_advance = true
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachine" id=21]
states/BaseMovement/node = SubResource( 18 )
states/BaseMovement/position = Vector2( 297, 194 )
states/Jump/node = SubResource( 31 )
states/Jump/position = Vector2( 297, 364.02 )
states/Land/node = SubResource( 33 )
states/Land/position = Vector2( 213, 279.02 )
states/ShieldMovement/node = SubResource( 28 )
states/ShieldMovement/position = Vector2( 609, 194 )
transitions = [ "BaseMovement", "ShieldMovement", SubResource( 29 ), "ShieldMovement", "BaseMovement", SubResource( 30 ), "BaseMovement", "Jump", SubResource( 32 ), "Jump", "Land", SubResource( 34 ), "Land", "BaseMovement", SubResource( 35 ) ]
graph_offset = Vector2( -109, 49.0202 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[sub_resource type="AnimationNodeStateMachinePlayback" id=37]

[sub_resource type="CapsuleShape" id=1]
radius = 0.2
height = 1.37

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.1, 0.2, 0.05 )

[sub_resource type="CapsuleShape" id=6]
radius = 0.15

[sub_resource type="ImageTexture" id=7]

[node name="Melanie" type="KinematicBody"]
pause_mode = 1
collision_layer = 2
collision_mask = 21
script = ExtResource( 5 )

[node name="EditorLight" type="DirectionalLight" parent="."]
transform = Transform( -0.610698, -0.555606, 0.564225, 0, 0.712528, 0.701644, -0.791864, 0.428492, -0.435139, 5.75187, 6.27839, 0 )
editor_only = true

[node name="Shadow" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 1.7, 0 )
visible = false
light_negative = true
light_cull_mask = 4294967293
spot_angle = 8.0
spot_angle_attenuation = 100.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../MelanieModel/AnimationPlayer")
active = true
parameters/playback = SubResource( 36 )
parameters/BaseMovement/BlendSpace2D/blend_position = Vector2( 0, 0 )
parameters/BaseMovement/TimeScale/scale = 1.0
parameters/ShieldMovement/playback = SubResource( 37 )

[node name="MelanieModel" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.885, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.11, 0 )

[node name="ShieldCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
shape = SubResource( 2 )
disabled = true

[node name="ShieldMesh" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0.85, 0.13 )
layers = 2

[node name="ShieldAnim" parent="." instance=ExtResource( 3 )]
process_priority = 1

[node name="TargetDetector" parent="." instance=ExtResource( 2 )]

[node name="Interactables" parent="." instance=ExtResource( 6 )]

[node name="HeadPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62956, 0 )

[node name="BombSpawner" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 4 )

[node name="SpawnArea" type="Area" parent="BombSpawner"]
monitorable = false
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="BombSpawner/SpawnArea"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.5, 0 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="BombSpawner"]

[node name="Timers" type="Node" parent="."]

[node name="Locked" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="AirTransition" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="ReTarget" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="CollisionData" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="LedgeGrabSystem" parent="." instance=ExtResource( 9 )]

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 300.0
margin_top = 100.0
margin_right = 340.0
margin_bottom = 140.0
texture = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="BombSpawner/SpawnArea" to="BombSpawner" method="_on_SpawnArea_body_entered"]
[connection signal="timeout" from="Timers/Locked" to="." method="_on_Locked_timeout"]
[connection signal="timeout" from="Timers/AirTransition" to="." method="_on_AirTransition_timeout"]
[connection signal="timeout" from="Timers/ReTarget" to="." method="_on_ReTarget_timeout"]
